fix scrolling to zoom

--- a/src/layout/ImageUpload/ImageCropper.module.css
+++ b/src/layout/ImageUpload/ImageCropper.module.css
@@ -2,7 +2,7 @@
 .cropperContainer {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: var(--ds-size-12);
 }
 
 @media (min-width: 1024px) {
@@ -121,7 +121,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
   padding: 0.75rem 1rem;
   background-color: #1f2937;
   color: white;
