--- a/src/layout/ImageUpload/ImageUpload.module.css
+++ b/src/layout/ImageUpload/ImageUpload.module.css
@@ -31,25 +31,20 @@
   }
 }
 
-.canvasContainer {
+.canvas {
+  width: 100%;
+  height: auto;
+  display: block;
   background-color: #e5e7eb;
   border-radius: 0.5rem;
   overflow: hidden;
   cursor: grab;
 }
 
-.canvasContainer:active {
-  cursor: grabbing;
-}
-
-.canvas {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
 /* Placeholder for when no image is loaded */
 .placeholder {
+  background-color: #e5e7eb;
+  border-radius: 0.5rem;
   width: 100%;
   height: 500px;
   display: flex;
