add common utils for draw and handlecrop functions + variable viewportsimplify mouse dragging and support touch dragging

--- a/src/layout/ImageUpload/ImageUpload.module.css
+++ b/src/layout/ImageUpload/ImageUpload.module.css
@@ -39,6 +39,7 @@
   border-radius: 0.5rem;
   overflow: hidden;
   cursor: grab;
+  touch-action: none;
 }
 
 /* Placeholder for when no image is loaded */
