--- a/src/layout/ImageUpload/ImageUpload.module.css
+++ b/src/layout/ImageUpload/ImageUpload.module.css
@@ -103,11 +103,22 @@
   transition: all 300ms;
 }
 
+.actionButtons,
 .shapeControls {
   display: flex;
   gap: 0.5rem;
   flex-direction: row;
   align-items: center;
+}
+
+.resetButton {
+  background-color: #e5e7eb;
+  color: #1f2937;
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+}
+
+.resetButton:hover {
+  background-color: #d1d5db;
 }
 
 .shapeButton {
