--- a/src/layout/ImageUpload/ImageCanvas.module.css
+++ b/src/layout/ImageUpload/ImageCanvas.module.css
@@ -12,3 +12,34 @@
 .canvas:active {
   cursor: grabbing;
 }
+
+.placeholder {
+  background-image:
+    linear-gradient(
+      45deg,
+      rgba(204, 204, 204, 0.5) 25%,
+      transparent 25%,
+      transparent 75%,
+      rgba(204, 204, 204, 0.5) 75%,
+      rgba(204, 204, 204, 0.5) 100%
+    ),
+    linear-gradient(
+      45deg,
+      rgba(204, 204, 204, 0.5) 25%,
+      rgba(255, 255, 255, 0.5) 25%,
+      rgba(255, 255, 255, 0.5) 75%,
+      rgba(204, 204, 204, 0.5) 75%,
+      rgba(204, 204, 204, 0.5) 100%
+    );
+  background-size: 20px 20px; /* Adjust size of each square */
+  background-position:
+    0 0,
+    10px 10px; /* Offset the second gradient */
+  width: 100%;
+  height: 320px;
+  overflow: hidden;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
