--- a/src/layout/ImageUpload/ImageDropzone.module.css
+++ b/src/layout/ImageUpload/ImageDropzone.module.css
@@ -31,7 +31,7 @@
   box-sizing: border-box;
 }
 
-.placeholder:hover {
+.placeholder:hover, .dragActive {
   background-image:
     linear-gradient(
       45deg,
