--- a/src/layout/ImageUpload/ImageCanvas.module.css
+++ b/src/layout/ImageUpload/ImageCanvas.module.css
@@ -12,27 +12,7 @@
 }
 
 .previewBackground {
-  background-image:
-    linear-gradient(
-      45deg,
-      rgba(204, 204, 204, 0.5) 25%,
-      transparent 25%,
-      transparent 75%,
-      rgba(204, 204, 204, 0.5) 75%,
-      rgba(204, 204, 204, 0.5) 100%
-    ),
-    linear-gradient(
-      45deg,
-      rgba(204, 204, 204, 0.5) 25%,
-      rgba(255, 255, 255, 0.5) 25%,
-      rgba(255, 255, 255, 0.5) 75%,
-      rgba(204, 204, 204, 0.5) 75%,
-      rgba(204, 204, 204, 0.5) 100%
-    );
-  background-size: 20px 20px; /* Adjust size of each square */
-  background-position:
-    0 0,
-    10px 10px; /* Offset the second gradient */
+  background-color: #f4f5f6; /* Following does not exist in v1: var(--ds-color-neutral-background-subtle); */
   height: 320px;
   display: flex;
   justify-content: center;
