--- a/src/layout/ImageUpload/ImageDropzone.module.css
+++ b/src/layout/ImageUpload/ImageDropzone.module.css
@@ -16,10 +16,10 @@
       rgba(204, 204, 204, 0.5) 75%,
       rgba(204, 204, 204, 0.5) 100%
     );
-  background-size: 20px 20px; /* Adjust size of each square */
+  background-size: 20px 20px;
   background-position:
     0 0,
-    10px 10px; /* Offset the second gradient */
+    10px 10px;
   height: 320px;
   overflow: hidden;
   display: flex;
